[gd_scene load_steps=30 format=3 uid="uid://cwy7ly2qoj4yq"]

[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="1_dm0en"]
[ext_resource type="AudioStream" uid="uid://2nb26u6yw7h8" path="res://Assets/Sounds/Excavation/rock-destroy-6409.mp3" id="2_y0xgk"]
[ext_resource type="AudioStream" uid="uid://b2adjs7sib1ng" path="res://Assets/Sounds/spellhit.mp3" id="3_lfjmh"]
[ext_resource type="AudioStream" uid="uid://b5fbbn6u4wxp" path="res://Assets/Sounds/Player/ough-47202.mp3" id="4_6xo2f"]
[ext_resource type="AudioStream" uid="uid://by2cd46gi657m" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 1 Render 0.mp3" id="4_7iv4g"]
[ext_resource type="AudioStream" uid="uid://cbjchwsjggnd1" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 2 Render 0.mp3" id="5_lmy10"]
[ext_resource type="AudioStream" uid="uid://cvafaq50rdxl6" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 3 Render 0.mp3" id="6_mgijm"]
[ext_resource type="AudioStream" uid="uid://ccwhfrthywaif" path="res://Assets/Sounds/Music/Pleasant Creek Loop.wav" id="7_d17nf"]
[ext_resource type="AudioStream" uid="uid://bm1bcvdosd7sl" path="res://Assets/Sounds/Ghost/ghost-woo-135543.mp3" id="7_llj8h"]
[ext_resource type="AudioStream" uid="uid://bvmremutdr4ei" path="res://Assets/Sounds/Music/Riverside Ride Short Loop.wav" id="7_vc0yr"]
[ext_resource type="AudioStream" uid="uid://dfw4ipa4goc3s" path="res://Assets/Sounds/Ghost/classic-ghost-sound-95773.mp3" id="8_464v1"]
[ext_resource type="AudioStream" uid="uid://bvlx2on1j7y2n" path="res://Assets/Sounds/Ghost/ghost-voice-halloween-moany-ghost-168411.mp3" id="9_rxhsq"]
[ext_resource type="AudioStream" uid="uid://bkji1m4122ghi" path="res://Assets/Sounds/Ghost/sad-ghost-40303.mp3" id="10_5lad8"]
[ext_resource type="AudioStream" uid="uid://bk1q4bprpk42x" path="res://Assets/Sounds/Ghost/dying-monster-101276.mp3" id="11_s42uy"]
[ext_resource type="AudioStream" uid="uid://cupf2elmxgm1t" path="res://Assets/Sounds/Ghost/ghost-scream-37774.mp3" id="12_7a3oi"]
[ext_resource type="AudioStream" uid="uid://bq630ou2gea6j" path="res://Assets/Sounds/Ghost/ghost-says-the-words-game-over-32172.mp3" id="16_5i8m3"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8gmyq"]
random_pitch = 1.36
random_volume_offset_db = 1.68
streams_count = 1
stream_0/stream = ExtResource("2_y0xgk")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pxnpc"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uiat6"]
streams_count = 1
stream_0/stream = ExtResource("3_lfjmh")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q0vqw"]
random_pitch = 1.51
streams_count = 1
stream_0/stream = ExtResource("4_6xo2f")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vgwlr"]
random_pitch = 2.26
streams_count = 1
stream_0/stream = ExtResource("3_lfjmh")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xvtfe"]
random_pitch = 1.46
random_volume_offset_db = 2.25
streams_count = 3
stream_0/stream = ExtResource("4_7iv4g")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_lmy10")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_mgijm")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vik24"]
streams_count = 1
stream_0/stream = ExtResource("7_d17nf")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hl0x8"]
streams_count = 1
stream_0/stream = ExtResource("7_vc0yr")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vblwh"]
random_pitch = 1.63
streams_count = 1
stream_0/stream = ExtResource("7_llj8h")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8swr7"]
random_pitch = 1.81
streams_count = 3
stream_0/stream = ExtResource("8_464v1")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_rxhsq")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_5lad8")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6wg6x"]
random_pitch = 1.72
streams_count = 1
stream_0/stream = ExtResource("11_s42uy")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h3d7n"]
random_pitch = 2.17
streams_count = 1
stream_0/stream = ExtResource("12_7a3oi")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8cy8k"]
streams_count = 1
stream_0/stream = ExtResource("16_5i8m3")
stream_0/weight = 1.0

[node name="AudioManager" type="Node2D" node_paths=PackedStringArray("music", "catnip_music") groups=["audiomanager"]]
script = ExtResource("1_dm0en")
music = NodePath("BGM/Music")
catnip_music = NodePath("BGM/CatnipMusic")

[node name="RockSounds" type="Node2D" parent="."]

[node name="RockHit" type="AudioStreamPlayer2D" parent="RockSounds"]

[node name="RockBreak" type="AudioStreamPlayer2D" parent="RockSounds"]
stream = SubResource("AudioStreamRandomizer_8gmyq")

[node name="PlayerSounds" type="Node2D" parent="."]

[node name="PlayerFloat" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_pxnpc")

[node name="PlayerFire" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_uiat6")

[node name="PlayerCatnip" type="AudioStreamPlayer2D" parent="PlayerSounds"]

[node name="PlayerHurt" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_q0vqw")
pitch_scale = 1.35

[node name="PlayerDie" type="AudioStreamPlayer2D" parent="PlayerSounds"]

[node name="SpellCast" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_vgwlr")
pitch_scale = 1.19

[node name="SpellHit" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_xvtfe")
volume_db = 0.307
pitch_scale = 1.08

[node name="Ambience" type="Node2D" parent="."]

[node name="BGM" type="Node2D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="BGM"]
stream = SubResource("AudioStreamRandomizer_vik24")

[node name="CatnipMusic" type="AudioStreamPlayer" parent="BGM"]
stream = SubResource("AudioStreamRandomizer_hl0x8")

[node name="Enemies" type="Node2D" parent="."]

[node name="GhostSleep" type="AudioStreamPlayer2D" parent="Enemies"]
stream = SubResource("AudioStreamRandomizer_vblwh")

[node name="GhostHaunt" type="AudioStreamPlayer2D" parent="Enemies"]
stream = SubResource("AudioStreamRandomizer_8swr7")

[node name="GhostStun" type="AudioStreamPlayer2D" parent="Enemies"]
stream = SubResource("AudioStreamRandomizer_6wg6x")
volume_db = 17.637

[node name="GhostBanished" type="AudioStreamPlayer2D" parent="Enemies"]
stream = SubResource("AudioStreamRandomizer_h3d7n")
volume_db = 4.514

[node name="GhostGameOver" type="AudioStreamPlayer2D" parent="Enemies"]
stream = SubResource("AudioStreamRandomizer_8cy8k")
volume_db = 24.0
